--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body": "^5.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "lowdb": "^1.0.0",
     "md5": "^2.3.0",
